force-app/main/default/objects/Membership_Income_Schedule_Item__c/Membership_Income_Schedule_Item__c.object-meta.xml
<CustomObject>
    <description
  >Allows users to specify a date and a dollar amount for items delivered.</description>
    <label>Membership Income Schedule Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Schedule Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Income Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>