force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula
  >IF( Monthly_Account_Name__c &lt;&gt; &quot;&quot;, Monthly_Account_Name__c,  Membership_Contract__r.Membership_Name__r.Account_Name__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name (Income)</label>
    <type>Text</type>
</CustomField>