force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/ACV_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>ACV_Snapshot__c</fullName>
    <description
  >Captures the ACV at the time of this income schedule entry for use on reporting.</description>
    <inlineHelpText
  >Captures the ACV at the time of this income schedule entry for use on reporting.</inlineHelpText>
    <label>ACV Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>