force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Contract_Details_No_Links__c.field-meta.xml
<CustomField>
    <fullName>Contract_Details_No_Links__c</fullName>
    <formula
  >IF( Monthly_Account_Name__c &lt;&gt;&quot;&quot;, &quot;||&quot;&amp;Membership_Contract__r.Name&amp;&quot;|Monthly|&quot;
,
TEXT(Membership_Contract__r.Start_Date__c) &amp; &quot;|&quot;&amp; TEXT(Membership_Contract__r.End_Date__c) &amp;&quot;|&quot;&amp;Membership_Contract__r.Name&amp;
&quot;|&quot;&amp; TEXT(Membership_Contract__r.Level__c) &amp;&quot;|$&quot;&amp; TEXT(Membership_Contract__r.Total_Value__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Details (No Links)</label>
    <type>Text</type>
</CustomField>