force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Date_2__c.field-meta.xml
<CustomField>
    <fullName>Date_2__c</fullName>
    <description>Copy of Date field for use on reporting.</description>
    <formula>Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of Date field for use on reporting.</inlineHelpText>
    <label>Date (2)</label>
    <type>Date</type>
</CustomField>