force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <inlineHelpText
  >Copy from &quot;Deliverable Description&quot; field on Membership Contract.</inlineHelpText>
    <label>Deliverable</label>
    <type>TextArea</type>
</CustomField>