force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Flow_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Date__c</fullName>
    <description
  >Only used to display the correct schedule item date within the Create Income Schedule flow. This is due to a bug in screen flow Data Tables that reflects a day prior to the actual date.</description>
    <label>Flow Date</label>
    <type>Date</type>
</CustomField>