force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <formula>Membership_Contract__r.Membership_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership</label>
    <type>Text</type>
</CustomField>