force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Membership_Contract__c.field-meta.xml
<CustomField>
    <fullName>Membership_Contract__c</fullName>
    <description
  >This is the parent membership over all of the line items in this delivery schedule.</description>
    <label>Membership Contract</label>
    <referenceTo>Membership_Contract__c</referenceTo>
    <relationshipLabel
  >Membership Income Schedule (Membership)</relationshipLabel>
    <relationshipName>Membership_Income_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>