force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Membership_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Contract_Id__c</fullName>
    <formula>Membership_Contract__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Contract Id</label>
    <type>Text</type>
</CustomField>