force-app/main/default/objects/Membership_Income_Schedule_Item__c/fields/Monthly_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Account_Name__c</fullName>
    <label>Monthly Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>