force-app/main/default/objects/Membership_Income_Schedule_Item__c/validationRules/Date_must_be_1st_of_the_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_must_be_1st_of_the_Month</fullName>
    <active>true</active>
    <description
  >Prevents the schedule Date from being listed on any day except the first of the month.</description>
    <errorConditionFormula>DAY( Date__c ) &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage
  >The schedule date must be set to the 1st of the month.</errorMessage>
</ValidationRule>